--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
-systemProp.APP_NAME=springboot-api
+systemProp.APP_NAME=apps-microservices
