--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
+/**
+ * This pluginManagement block is used to define repositories for plugins.
+ *
+ **/
 pluginManagement {
     repositories {
         mavenCentral()
