--- a/src/main/resources/application-db.properties
+++ b/src/main/resources/application-db.properties
@@ -1,5 +1,5 @@
-spring.couchbase.connection-string=localhost
-spring.couchbase.username=Administrator
-spring.couchbase.password=password
-spring.couchbase.bucket.name=campaigns
+spring.couchbase.connection-string=cb.ryy-53mtsul0jchn.cloud.couchbase.com
+spring.couchbase.username=springboot_restapi
+spring.couchbase.password=
+spring.couchbase.bucket.name=campaign
 campaign.counter.key=campaign_counter
