--- a/src/main/resources/application-db.properties
+++ b/src/main/resources/application-db.properties
@@ -1,4 +1,4 @@
-spring.couchbase.connection-string=cb.ryy-53mtsul0jchn.cloud.couchbase.com
+spring.couchbase.connection-string=couchbases://cb.ryy-53mtsul0jchn.cloud.couchbase.com
 spring.couchbase.username=springboot_restapi
 spring.couchbase.password=
 spring.couchbase.bucket.name=campaign
