--- a/src/main/resources/application-db.properties
+++ b/src/main/resources/application-db.properties
@@ -3,4 +3,7 @@ spring.couchbase.connection-string=couchbases://cb.ryy-53mtsul0jchn.cloud.couchb
 spring.couchbase.username=springboot_restapi
 spring.couchbase.password=
 spring.couchbase.bucket.name=campaign
+
 campaign.counter.key=campaign_counter
+offer.counter.key=offer_counter
+merchant.counter.key=merchant_counter
