--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,11 @@ dependencies {
   implementation 'org.apache.kafka:kafka-clients'
   implementation 'org.springframework.kafka:spring-kafka'
 
+  /**
+   * Spring Boot starter for Redis cache.
+   */
+  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
   /** UTILITIES **/
   /**
